--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@react-three/xr": "^6.6.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^7.1.5",
     "three": "^0.173.0"
   }
 }
