--- a/package.json
+++ b/package.json
@@ -25,12 +25,25 @@
     "vite": "^6.1.0"
   },
   "dependencies": {
-    "@react-three/drei": "^9.121.4",
-    "@react-three/fiber": "^8.17.14",
+    "@radix-ui/react-slot": "^1.1.2",
+    "@react-three/drei": "9.50",
+    "@react-three/fiber": "8.9",
     "@react-three/xr": "^6.6.2",
+    "@reduxjs/toolkit": "^2.5.1",
+    "axios": "^1.7.9",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.475.0",
+    "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.5",
-    "three": "^0.173.0"
+    "react-toastify": "^11.0.3",
+    "recharts": "^2.15.1",
+    "tailwind-merge": "^3.0.1",
+    "tailwindcss-animate": "^1.0.7",
+    "three": "^0.148.0",
+    "zustand": "^3.7.2"
   }
 }
