--- a/package.json
+++ b/package.json
@@ -1,52 +1,55 @@
 {
-  "name": "my-culture-my-value",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
-  },
-  "devDependencies": {
-    "@eslint/js": "^9.19.0",
-    "@types/react": "^19.0.8",
-    "@types/react-dom": "^19.0.3",
-    "@vitejs/plugin-react": "^4.3.4",
-    "autoprefixer": "^10.4.20",
-    "eslint": "^9.19.0",
-    "eslint-plugin-react": "^7.37.4",
-    "eslint-plugin-react-hooks": "^5.0.0",
-    "eslint-plugin-react-refresh": "^0.4.18",
-    "globals": "^15.14.0",
-    "postcss": "^8.5.1",
-    "tailwindcss": "^3.4.17",
-    "vite": "^6.1.0"
-  },
-  "dependencies": {
-    "@radix-ui/react-slot": "^1.1.2",
-    "@react-spring/parallax": "^9.7.5",
-    "@react-three/drei": "9.50",
-    "@react-three/fiber": "8.9",
-    "@react-three/xr": "^6.6.2",
-    "@reduxjs/toolkit": "^2.5.1",
-    "axios": "^1.7.9",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "lucide-react": "^0.475.0",
-    "prop-types": "^15.8.1",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-icons": "^5.5.0",
-    "react-redux": "^9.2.0",
-    "react-router-dom": "^7.1.5",
-    "react-toastify": "^11.0.3",
-    "recharts": "^2.15.1",
-    "swiper": "^11.2.4",
-    "tailwind-merge": "^3.0.1",
-    "tailwindcss-animate": "^1.0.7",
-    "three": "^0.148.0",
-    "zustand": "^3.7.2"
-  }
+	"name": "my-culture-my-value",
+	"private": true,
+	"version": "0.0.0",
+	"type": "module",
+	"scripts": {
+		"dev": "vite",
+		"build": "vite build",
+		"lint": "eslint .",
+		"preview": "vite preview",
+		"preview:worker": "npm run build && wrangler dev",
+		"deploy:worker": "npm run build && wrangler deploy"
+	},
+	"devDependencies": {
+		"@eslint/js": "^9.19.0",
+		"@types/react": "^19.0.8",
+		"@types/react-dom": "^19.0.3",
+		"@vitejs/plugin-react": "^4.3.4",
+		"autoprefixer": "^10.4.20",
+		"eslint": "^9.19.0",
+		"eslint-plugin-react": "^7.37.4",
+		"eslint-plugin-react-hooks": "^5.0.0",
+		"eslint-plugin-react-refresh": "^0.4.18",
+		"globals": "^15.14.0",
+		"postcss": "^8.5.1",
+		"tailwindcss": "^3.4.17",
+		"vite": "^6.1.0"
+	},
+	"dependencies": {
+		"@radix-ui/react-slot": "^1.1.2",
+		"@react-spring/parallax": "^9.7.5",
+		"@react-three/drei": "9.50",
+		"@react-three/fiber": "8.9",
+		"@react-three/xr": "^6.6.2",
+		"@reduxjs/toolkit": "^2.5.1",
+		"axios": "^1.7.9",
+		"class-variance-authority": "^0.7.1",
+		"clsx": "^2.1.1",
+		"lucide-react": "^0.475.0",
+		"prop-types": "^15.8.1",
+		"react": "^18.3.1",
+		"react-dom": "^18.3.1",
+		"react-icons": "^5.5.0",
+		"react-redux": "^9.2.0",
+		"react-router-dom": "^7.1.5",
+		"react-toastify": "^11.0.3",
+		"recharts": "^2.15.1",
+		"swiper": "^11.2.4",
+		"tailwind-merge": "^3.0.1",
+		"tailwindcss-animate": "^1.0.7",
+		"three": "^0.148.0",
+		"wrangler": "^4.0.0",
+		"zustand": "^3.7.2"
+	}
 }
