--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,8 +1,9 @@
 name: Deploy to Cloudflare Workers
+
 on:
     push:
         branches:
-            - main # Change if using a different branch
+            - main
 
 jobs:
     deploy:
@@ -11,10 +12,10 @@ jobs:
             - name: Checkout Repository
               uses: actions/checkout@v4
 
-            - name: Install Wrangler
-              run: npm install -g wrangler
+            - name: Install Dependencies
+              run: npm install
 
-            - name: Publish to Cloudflare
-              run: wrangler publish
+            - name: Deploy to Cloudflare
+              run: npm run deploy:worker
               env:
                   CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
