--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"vite": "^6.1.0"
 	},
 	"dependencies": {
+		"@headlessui/react": "^2.2.0",
 		"@radix-ui/react-slot": "^1.1.2",
 		"@react-spring/parallax": "^9.7.5",
 		"@react-three/drei": "9.50",
@@ -45,7 +46,8 @@
 		"react-router-dom": "^7.1.5",
 		"react-toastify": "^11.0.3",
 		"recharts": "^2.15.1",
-		"swiper": "^11.2.4",
+		"socket.io-client": "^4.8.1",
+		"swiper": "^11.2.6",
 		"tailwind-merge": "^3.0.1",
 		"tailwindcss-animate": "^1.0.7",
 		"three": "^0.148.0",
